manifests/storage/longhorn/longhorn-disk-setup.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: longhorn-disk-prep
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: longhorn-disk-prep
  template:
    metadata:
      labels:
        name: longhorn-disk-prep
    spec:
      hostNetwork: true
      hostPID: true
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      tolerations:
      - operator: Exists
      containers:
      - name: disk-prep
        image: ubuntu:24.04
        securityContext:
          privileged: true
        command:
        - /bin/bash
        - -c
        - |
          [...]
        volumeMounts:
        - name: host-root
          mountPath: /host
      volumes:
      - name: host-root
        hostPath:
          path: /
          type: Directory
