manifests/storage/longhorn/test-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: longhorn-test-pod
spec:
  containers:
  - name: test-container
    image: alpine
    command: ["/bin/sh", "-c", "echo 'Longhorn IO Test' > /data/test.log && sleep infinity"]
    volumeMounts:
    - name: storage
      mountPath: /data
  volumes:
  - name: storage
    persistentVolumeClaim:
      claimName: longhorn-test-pvc
