manifests/storage/longhorn/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # Use these if you are using NGINX Ingress Controller (Standard for BCM)
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "10000m"
    nginx.ingress.kubernetes.io/read-timeout: "600"
    nginx.ingress.kubernetes.io/send-timeout: "600"
spec:
  tls:
  - hosts:
    - longhorn.pdx-nwa-k8s-ingress.nvidia.com
    secretName: longhorn-tls-secret
  rules:
  - host: longhorn.pdx-nwa-k8s-ingress.nvidia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
